--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+/* html {
+    min-height: 100%;
+    position: relative;
+} */
+
 body {
     background-image: url("../images/rockywall.png");
 }
@@ -15,7 +20,6 @@ body {
 header {
     background-color: white;
     border-bottom: 2px solid lightgray;
-    width: 100%;
 }
 
 .name {
@@ -24,7 +28,7 @@ header {
     color: white;
     font-size: 30px;
     padding: 20px;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -32,7 +36,8 @@ header {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: slategray;
     font-size: 120%;
-    padding-top: 35px;
+    padding-top: 30px;
+    text-align: right;
 }
 
 
@@ -40,14 +45,33 @@ header {
 
 div.aboutmecontainer {
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 div.aboutme {
     background-color: #fff;
     border: 1px solid #ddd;
-    /* padding: 20px; */
+    padding: 20px;
+    margin-bottom: 20px;
+    /* margin-right: 20px; */
 }
 
+div.aboutmetitle {
+    color: #4aaaa5;
+    border-bottom: 3px solid lightgray;
+    padding-bottom: 20px;
+    color: #4aaaa5;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    font-size: 200%;
+    margin: 0 0 20px 0;
+}
+
+div.clear-fix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
 
 .selfie {
     width: 175px;
@@ -63,13 +87,28 @@ p {
     font-size: 130%;
 }
 
+/* section/sidebar */
+
 section.connectwithme {
+    
+}
+
+div.connect {
+    padding: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
-    text-align: center;
-    /* display: inline-block; */
-    /* padding: 20px; */
+    /* margin-bottom: 20px; */
+}
 
+div.connecttitle {
+    border-bottom: 2px solid lightgray;
+    color: #4aaaa5;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    font-size: 155%;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    /* margin-top: 20px; */
 }
 
 .socialimg {
@@ -77,6 +116,152 @@ section.connectwithme {
     height: 75px;
     display: inline-block;
 }
+
+.imgmar {
+    margin-right: 5px;
+}
+
+/* PORTFOLIO SECTION */
+
+.portfolioimg {
+    margin: 10px 0 20px 0;
+    /* max-height: 500px; */
+}
+
+div.imageonediv {
+    position: relative;
+}
+
+div.imageonediv h2 {
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+    /* font-weight: 300; */
+    letter-spacing: .5px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+div.imagetwodiv {
+    position: relative;
+}
+
+div.imagetwodiv h2 {
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+    letter-spacing: .5px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+div.imagethreediv {
+    position: relative;
+    max-width: 550px;
+    margin: 0 auto;
+}
+
+div.imagethreediv h2 {
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+    letter-spacing: .5px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+/* you can solve image resize issue by setting it's div/container to have a maximum width and then centering contents */
+
+div.imagefourdiv {
+    position: relative;
+    max-width: 500px;
+    margin: 0 auto;
+
+}
+
+div.imagefourdiv h2 {
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+    letter-spacing: .5px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+div.imagefivediv {
+    position: relative;
+}
+
+div.imagefivediv h2 {
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+    letter-spacing: .5px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+/* .testimg5 {
+    position: relative;
+} */
+
+/* CONTACT Section */
+
+#inputname {
+    padding: 2px;
+    width: 100%;
+    margin: 0px auto 10px auto;
+    height: 30px;
+}
+
+#inputemail {
+    padding: 2px;
+    width: 100%;
+    margin: 0px auto 10px auto;
+    height: 30px;
+}
+
+#messagebox {
+    padding: 2px;
+    width: 100%;
+    margin: 0px auto 10px auto;
+    border: 1px solid lightgray;
+    height: 200px;
+}
+
+h2.submit {
+    background-color: #4aaaa5;
+    padding: 10px 20px 10px 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
+    display: inline-block;
+}
+
+.contactboxes {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: slategray;
+}
+
+h3 {
+    font-size: 150%;
+}
+
+
 
 
 /* FOOTER */
@@ -87,4 +272,8 @@ section.connectwithme {
     text-align: center;
     padding: 40px;
     color: lightgray;
+    /* position: relative; */
+    /* position: absolute;
+    bottom: 0;
+    width: 100%; */
   }
