--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,11 @@ div.connecttitle {
     /* max-height: 500px; */
 }
 
+/* .psychic {
+    height: 324px;
+    width: 324px;
+} */
+
 div.imageonediv {
     position: relative;
 }
